--- a/tags/Example/.settings/org.eclipse.core.resources.prefs
+++ b/tags/Example/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Sat May 15 12:56:10 CST 2010
+#Sat May 15 16:36:39 CST 2010
 eclipse.preferences.version=1
 encoding//webapp/JsonRpcClient.js=UTF-8
+encoding//webapp/index.jsp=UTF-8
